Create new post

--- a/_posts/2022-6-12-Spring.md
+++ b/_posts/2022-6-12-Spring.md
@@ -55,6 +55,15 @@ Spring enhances Java
 - Spring integrations such as JMS.
    
 Spring complements Java.
-Spring competes Java.
+- Fill the gaps of Java,
+- Spring MVC is solution for servlets and JSPs in order to use them in a standard arcitechture.
+- 
 
-### 
+Spring competes Java.
+- alternative of Java EE.
+- DI, WS are all part of Java Standard, but Spring provides alternatives.
+
+
+### Documentation
+
+
