--- a/_posts/2022-6-14-DI.md
+++ b/_posts/2022-6-14-DI.md
@@ -3,3 +3,7 @@ layout: post
 title: Introduction to Spring
 published: true
 ---
+
+## Dependency Injection
+
+Dependency Injection is creating a depended object somewhere else and then passing it to the depending object is called dependency injection. Dependency Injection is sub thread of dependency management. Usage of object is usually harder than creating them...
